# rustrade

./: .gitignore  .todo  Cargo.toml  README.md  flow.drawio  rustfmt.toml
.cargo/: config
examples/: macd.rhai  mcad.rhai
examples/command/: command_import_trader_agg.sh  command_script_back_test 1m.sh  command_script_back_test.sh  command_script_back_test_1m.sh
migrations/: 20210131000254_initial.sql  20210403000000_trade.sql  20210403000001_position.sql  20210405000001_symbol.sql  20210405000002_position.sql  20210405000003_flow.sql  20210410220249_trade_agg.sql  20210414002248_flow_add_log_column.sql
scripts/: start-pgadmin.sh  start-postgresql.sh  watch.sh
src/: app.rs  candles_range.rs  candles_utils.rs  checker.rs  exchange.rs  main.rs  repository.rs  repository_candle.rs  repository_trade.rs
src/application/: app.rs  candles_provider.rs  plot_selection.rs  streamer.rs
src/config/: candles_selection.rs  definition.rs  selection.rs  symbol_minutes.rs
src/model/: candle.rs  flow.rs  low_high_price.rs  mod.rs  open_close.rs  open_close_price.rs  open_close_range.rs  open_close_time.rs  position.rs  price.rs  quantity.rs  side.rs  symbol.rs  trade_agg.rs  trade_history.rs
src/repository/: candle_repository.rs  flow_repository.rs  mod.rs  pool_factory.rs  position_repository.rs  repository_candle.rs  repository_factory.rs  repository_flow.rs  repository_position.rs  repository_symbol.rs  repository_trade_agg.rs  repository_trade_history.rs  symbol_repository.rs  trade_agg_repository.rs
src/service/: candles_provider.rs  checker.rs  exchange.rs  mod.rs  (+3 more)
(+169 files in other folders)
