[package]
authors = ["vanius.rb <vanius@gmail.com>"]
edition = "2018"
name = "rustrade"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
atty = "0.2.14"
binance = "0.12.3"
chrono = "0.4.19"
color-eyre = "0.5.10"
colored = "2.0"
dotenv = "0.15"
enum-display-derive = "0.1.1"
eyre = "0.6.5"
ifmt = "0.3"
lazy_static = "1.4"
log = "0.4.14"
pad = "0.1.6"
paw = "1.0.0"
plotters = {version = "0.3"}
rhai = "0.19.14"
structopt = {version = "0.3.21", features = ["paw"]}
termcolor = "1.1"
# plotters = {Version = "0.3.0", default_features = false, features = ["datetime", "candlestick", "point_series", "line_series", "ttf", "bitmap_encoder"]}
# plotters-bitmap = {version = "0.3.0", default-features = true, features = ["image_encoder"]}
lockfree-object-pool = "0.1"
# object-pool = "0.5.3"
plotters-bitmap = "0.3"
rayon = "1.5"
rust_decimal = {version = "1.10"}
rust_decimal_macros = "1.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-async-std-native-tls", "postgres", "macros", "decimal", "chrono"]}
ta = "0.4"
